--- a/css/style.css
+++ b/css/style.css
@@ -90,9 +90,17 @@ i{
     font-weight: 600;
 }
 .search-bar ul li .input-group-text i{
-    padding: 5px;
+    padding: 5px 0 5px 0px;
 }
-.input-group-text{
-    background-color: #fff;
-    border-radius: 6px 0 0 6px;
+.search-bar .input-group-text{
+    background-color:transparent;
+    border-radius: 0;
+    border: none;
+    border-bottom: 1px solid #000;
+}
+.search-bar .search{
+    background-color: transparent;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #000;
 }
